# http-client

./: Cargo.toml  README.md
.github/workflows/: pages.yml
src/: cli.rs  http_header.rs  lib.rs  main.rs  request.rs
tests/: client.rs  server.rs
