[package]
name = "http-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
http = "0.2.9"
url = "2.4.1"

[dev-dependencies]
axum = "0.6.20"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["trace"] }